요세푸스 문제_1158

--- a/backjoon_new/.settings/org.eclipse.core.resources.prefs
+++ b/backjoon_new/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,2 @@
 eclipse.preferences.version=1
-encoding//src/basic/\uD0C0\uC77C\uB9C1_11726.java=UTF-8
+encoding//src/dp_basic/\uD0C0\uC77C\uB9C1_11726.java=UTF-8
